--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "typescript-start",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "build": "tsc"
@@ -12,5 +11,6 @@
   "dependencies": {},
   "devDependencies": {
     "typescript": "^4.7.4"
-  }
+  },
+  "description": ""
 }
